REVISI FORM PARAMETERS (GET, INSERT, UPDATE, DELETE)
